Resolves tdf#152440 BOOK VIEW: Switching page view to book view

or from book view results in a switch to a semi-random page

Change-Id: I2e3e63430fb2ed04d2f71cf2e716844b85f440f7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173510
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
Tested-by: Jenkins